[#acty6t] - Add disclaimer to login, show statements impact

--- a/src/app/pages/indicator/result/result.component.html
+++ b/src/app/pages/indicator/result/result.component.html
@@ -17,7 +17,7 @@
             Level
           </th>
           <th style="font-weight: bold;">
-            Statement
+            Result Statement
           </th>
           <th
           [nzFilters]="statusFilter"
