--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -9,3 +9,15 @@
   border-radius: 5px;
   padding: 10% 10% 2%;
 }
+
+#disclaimer {
+  padding: 25px;
+  border-radius: 5px;
+  // background-color: #C6C6C5;
+  background-color: rgba(242, 242, 242, 0.7);
+  bottom: 50px;
+}
+
+#homeButton {
+  left: 45%;
+}
