--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -160,17 +160,18 @@ background-color: #453457;
   padding: 0 0.3rem 0.3rem 0.3rem;
 }
 //selected icon color (The tep one is currently viewing)
-::ng-deep
-  .ant-steps-item-custom.ant-steps-item-process
-  .ant-steps-item-icon
-  > .ant-steps-icon {
-  background: #453457;
-  color: white;
-  font-size: 1.5rem;
-  background-color: #453457;
-  font-size: 1.5rem;
-  border-radius: 5px;
-  padding: 0 0.3rem 0.3rem 0.3rem;
+::ng-deep .ant-steps-item-active  {
+    .ant-steps-icon {
+      background-color: #a5c2ae;
+      color: white !important;
+      font-size: 1.5rem;
+      border-radius: 5px;
+      padding: 0 0.3rem 0.3rem 0.3rem;
+    
+    }
+    .ant-steps-item-title {
+      color: #a5c2ae !important;
+    }
 }
 //text color before
 ::ng-deep
