--- a/src/styles.scss
+++ b/src/styles.scss
@@ -227,8 +227,6 @@ app-manage-indicators {
 
 #knowledgeBaseButton {
   top: 20rem;
-  right: -98px;
-  width: 10rem;
 }
 @media screen and (max-height: 905px) {
   #knowledgeBaseButton {
@@ -241,6 +239,8 @@ app-manage-indicators {
 }
 #feedbackButton {
   top: 42rem;
+  width: 10rem;
+  right: -98px;
 }
 @media screen and (max-height: 1050px) {
   #uploadButton {
@@ -286,6 +286,6 @@ app-manage-indicators {
   transition: right 2s;
 }
 
-#stepButton:hover, #feedbackButton:hover, .sideButton:hover {
+#stepButton:hover, #feedbackButton:hover, .sideButton:hover, #knowledgeBaseButton:hover {
   right: 0px;
 }
