improved the visualization links loading

--- a/src/app/pages/indicator/visualization/visualization.component.html
+++ b/src/app/pages/indicator/visualization/visualization.component.html
@@ -1,7 +1,9 @@
 <div
-  #parent_canvas_vis
   style="min-height: 300px"
-  [ngClass]="{ fullscreen: isFullscreen, smallscreen: !isFullscreen }"
+  [ngClass]="{
+    fullscreen: isFullscreen,
+    smallscreen: !isFullscreen
+  }"
 >
   <div>
     <div id="toolbar" class="steps-action">
