[#acygy2] - Allow delete of the document. Changed workflow of upload

--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -287,3 +287,9 @@ background-color: #453457;
 .ant-steps-item-wait .ant-steps-item-icon > .ant-steps-icon {
   border-radius: 5px;
 }
+.closeIcon {
+  cursor: pointer;
+  font-size: 1rem;
+  float: right;
+  padding-right: 15px;
+}
