--- a/src/app/pages/indicator/selectdocument/selectdocument.component.scss
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.scss
@@ -67,7 +67,7 @@
 .uploadText {
     padding-top: 2rem;
     padding-bottom: 1rem;
-    min-height: 20rem;
+    min-height: 10rem;
     background-color: rgba(242, 242, 242, 0.7);
     margin: auto;
 }
@@ -83,7 +83,7 @@
 }
 
 .disclaimer {
-    padding-top: 2rem;
+    margin-top: 1rem;
     position: relative;
     width: 60%;
     max-height: 8rem;
