--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -1,4 +1,4 @@
 <div>
     <img src="../../../assets/pag-404.jpg" alt= "404 image" />
-    <button nz-button nzType="primary" class="default-button" (click)="goToHome()">Home</button>
+    <button nz-button nzType="primary" class="default-button" routerLink="/">Home</button>
 </div>
