--- a/src/app/pages/indicator/selectdocument/selectdocument.component.html
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.html
@@ -1,5 +1,5 @@
 <div class="uploadArea">
-    <div class="flex-container">
+    <div class="flex-container"*ngIf='progress==0'>
       <div>
         <label>Sector:</label><br />
         <nz-select
@@ -74,10 +74,10 @@
   nzAccept=".doc,.docx"
   [nzLimit]="1"
   [nzSize]="25000"
-  [(nzFileList)]="fileList"
-  [nzShowUploadList]="false"
-  [nzCustomRequest]="uploadAndScan"
-  [nzDisabled]="!fileScanned"
+  [nzFileList]="fileList"
+  [nzBeforeUpload]="beforeUpload"
+  [nzShowUploadList]="true"
+  *ngIf="progress==0"
 >
   <div class="uploadText" *ngIf='progress==0'>
     <i class = "uploadIcon" nz-icon nzType="folder" nzTheme="outline"></i>
@@ -85,20 +85,21 @@
     <p class="ant-upload-hint">
       Support for a single MS Word file upload.
     </p>
-    <p>{{ fileName }}</p>
-    <div class="disclaimer">
-      <p class="disclaimerText"><!--Disclaimer text added here-->
-        <b>Disclaimer:</b> Uploading data here is safe. You can trust us with your info, because we never save it
-        anywhere. The algorithm uses your text to scan for keywords and retains access to it only so you can complete the procedure.
-        Your data is discarded as soon as you click ‘done’ in the last step, or if you refresh the window before you’re done.
-        We cannot access your information at any point.
-      </p>
-    </div>
-  </div>
-  <div *ngIf="progress!=0">
-    <h2>{{uploadStateTitle}}</h2>
-    <nz-progress [nzPercent]="progress" nzType="circle" [nzWidth]="150">
-    </nz-progress>
   </div>
 </nz-upload>
+<div class="disclaimer" *ngIf="progress==0">
+  <p class="disclaimerText">
+    <b>Disclaimer:</b> Uploading data here is safe. You can trust us with your info, because we never save it
+    anywhere. The algorithm uses your text to scan for keywords and retains access to it only so you can complete the procedure.
+    Your data is discarded as soon as you click ‘done’ in the last step, or if you refresh the window before you’re done.
+    We cannot access your information at any point.
+  </p>
+</div>
+
+<div *ngIf="progress!=0">
+  <h2>{{uploadStateTitle}}</h2>
+  <nz-progress [nzPercent]="progress" nzType="circle" [nzWidth]="150">
+  </nz-progress>
+</div>
+
 </div>
