--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -291,5 +291,5 @@ background-color: #453457;
   cursor: pointer;
   font-size: 1rem;
   float: right;
-  padding-right: 15px;
+  margin-right: 15px;
 }
