--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -14,8 +14,8 @@
 		How to use Logframe Lab
 	</p>
 	<div class="dialog__video" style="text-align: center;">
-		<!--iframe width="auto" height="auto" src="https://www.youtube.com/embed/6wD4V0rvlDI?list=PLEsfXFp6DpzQThMU768hTZInWUqfoyTEW" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe -->
-		<h3 style="margin-top: 50px;">Coming Soon</h3>
+		<iframe width="435" height="245" src="https://www.youtube.com/embed/tSEjnOoGHBU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<!-- <h3 style="margin-top: 50px;">Coming Soon</h3> -->
 	</div>
 	<div>
 		<button id="showMeButton" nz-button nzType="primary" *ngIf="closable" (click)="close()" class="dialog__lower-close-btn">Show
