[#an0zrw] - Change dialog button

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -85,6 +85,7 @@
             which you had selected in Step #2.
           </p>
         </div>
+        <a href="https://youtu.be/tSEjnOoGHBU" style="color: #a5c2ae;" target="_blank" and rel="noopener noreferrer">LogframeLab - How to guide</a>
       </ng-template>
     </div>
 
