--- a/src/app/pages/indicator/selectdocument/selectdocument.component.scss
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.scss
@@ -127,3 +127,8 @@ h2 {
 ::ng-deep .ant-upload-list-item-info:hover {
     background-color: #a5c2ae !important;
 }
+
+::ng-deep .ant-upload-list-item {
+    width: 60%;
+    margin-left: 20%;
+}
