--- a/src/app/components/dialog/dialog.component.scss
+++ b/src/app/components/dialog/dialog.component.scss
@@ -59,20 +59,6 @@
       top: 40px;
     }
   }
-  .dialog__close-btn {
-    position: absolute;
-    top: 30px;
-    right: 40px;
-    font-family: montserrat, sans-serif;
-    font-size: 1.5rem;
-    font-weight: bolder;
-    border: none;
-    background: none;
-    padding: 0px;
-    line-height: 29px;
-    display: flex;
-    color: #453457;
-  }
   
   .dialog__title{
     margin-bottom: 0;
@@ -142,35 +128,34 @@
     padding-top: 20px;
     padding-bottom: 0px;
   }   */
-  .dialog__lower-close-btn {
-    position: absolute;
-    width: 90px;
-    height: 30px;
-    right: 25rem;
-    top: calc(50% - 30px/2 + 222px);
-    background: #453457;
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    border-radius: 5px;
-    font-family:montserrat, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-  }
-  /* .dialog__lower-close-btn {
-    color: rgb(231, 222, 222);
-    background-color: rgb(108, 76, 184);
-    border-radius: 3px;
-    border-color: rgb(126, 96, 197);
-    opacity: 0.8;
-    font-weight: 700;
-    height: 40px;
-    width: 110px;
-    position: absolute;
-    bottom: 30px;
-    right: 40px;
+  // .dialog__lower-close-btn {
+  //   position: absolute;
+  //   width: 90px;
+  //   height: 30px;
+  //   right: 25rem;
+  //   top: calc(50% - 30px/2 + 222px);
+  //   background: #453457;
+  //   border: 1px solid #FFFFFF;
+  //   box-sizing: border-box;
+  //   border-radius: 5px;
+  //   font-family:montserrat, sans-serif;
+  //   font-style: normal;
+  //   font-weight: bold;
+  //   font-size: 12px;
+  //   text-transform: uppercase;
+  //   color: #FFFFFF;
+  // }
   
-  } */
+::ng-deep .dialog-modal .ant-modal-content {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),url(..\..\..\assets\PopUpImage.png);
+  background-repeat: repeat-y;
+  background-size: 57rem 32rem;
+}
+
+#getStartedButton {
+  padding: 5px 15px;
+}
+::ng-deep .ant-modal-footer {
+  text-align: center;
+}
   
