[#1ta6y7] - Add field for baseline value for non world bank indicators

--- a/src/app/components/dialog/dialog.component.scss
+++ b/src/app/components/dialog/dialog.component.scss
@@ -104,8 +104,8 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    width: 27.25rem;
-    height: 14.375rem;
+    width: 600px;
+    height: 320px;
     background: #F2F2F2;
     /* position: relative;
     padding-bottom: 56.25%; /* 16:9
