--- a/src/app/pages/indicator/scanresult/scanresult.component.scss
+++ b/src/app/pages/indicator/scanresult/scanresult.component.scss
@@ -101,3 +101,8 @@
 #baselineLatest:hover:not(:disabled) {
     background-color: #453457;
 }
+
+#baselineInput {
+  width: 200px;
+  margin-left: 5px;
+}
