--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,11 +1,11 @@
 <nz-modal [(nzVisible)]="visible" nzWidth="900px" [nzFooter]="footer" (nzOnCancel)="visible = false" nzWrapClassName="dialog-modal">
 		<h1 class="dialog__title">Welcome to <strong>Logframe Lab</strong></h1>
-		<p class ="dialog__information">
+		<!-- <p class ="dialog__information">
 			Logframe Lab is an open source web application created to help NGOs and community-based organisations match
 			their project ideas with the most relevant metrics for tracking their success. This tool leads you step-by-step
 			through a simple process that results in a formatted, logical framework (logframe) that you can download and use
 			for reporting your progress to your funders.
-		</p>
+		</p> -->
 
 		<div class="dialog__video" style="text-align: center;">
 			<iframe width="600" height="320" src="https://www.youtube.com/embed/tSEjnOoGHBU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
