--- a/src/app/pages/indicator/result/result.component.html
+++ b/src/app/pages/indicator/result/result.component.html
@@ -1,87 +1,100 @@
 <div class="content-panel">
-      <nz-table
-      #dynamicTable
-      [nzData]="listOfData"
-      [nzPageSize]="listOfData.length"
-      nzShowPagination="false"
-      nzShowSizeChanger="false"
-      nzSize="middle"
-      nzBordered
+  <nz-table
+    #dynamicTable
+    [nzData]="listOfData"
+    [nzPageSize]="listOfData.length"
+    nzShowPagination="false"
+    nzShowSizeChanger="false"
+    nzSize="middle"
+    nzBordered
     >
-      <thead>
-        <tr>
-          <th
-            [nzFilters]="levelFilter"
-            [nzFilterFn]="filterLevel"
-            >
-            Level
-          </th>
-          <th style="font-weight: bold;">
-            Result Statement
-          </th>
-          <th
-          [nzFilters]="statusFilter"
-          [nzFilterFn]="filterStatus"
-          >
-            Status
-          </th>
-          <th nzWidth="25%">
-            Score
-          </th>
-          <th nzWidth="8%">
-            Action
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <ng-template ngFor let-data [ngForOf]="dynamicTable.data" let-index="index">
-          <tr class="editable-row">
-            <td>
-              <div class="editable-cell" [hidden]="editId === data.id" (click)="startEdit(data.id)">
-                <nz-tag [nzColor]="data.colorLevel"
-                >{{ data.level }}
+    <thead>
+      <tr>
+        <th [nzFilters]="levelFilter" [nzFilterFn]="filterLevel">
+          Level
+        </th>
+        <th style="font-weight: bold;">
+          Result Statement
+        </th>
+        <th [nzFilters]="statusFilter" [nzFilterFn]="filterStatus">
+          Status
+        </th>
+        <th nzWidth="25%">
+          Score
+        </th>
+        <th nzWidth="8%">
+          Action
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-template ngFor let-data [ngForOf]="dynamicTable.data" let-index="index">
+        <tr class="editable-row">
+          <td>
+            <div class="editable-cell" [hidden]="editId === data.id" (click)="startEdit(data.id)">
+              <nz-tag [nzColor]="data.colorLevel">
+                {{ data.level }}
               </nz-tag>
-              </div>
-              <nz-select id="level" name="level" [(ngModel)]="data.level" nzPlaceHolder="Level"
-              [hidden]="editId !== data.id" (ngModelChange)="levelChangeHandle(data)">
-                <nz-option *ngFor="let level of levelFilter" [nzLabel]="level.text"
-                            [nzValue]="level.text"></nz-option>
-              </nz-select>
-            </td>
-            
-            <td title="You can edit by selecting the row">
-              <div class="editable-cell" [hidden]="editId === data.id" (click)="startEdit(data.id)">
-                {{ data.statement }}
-              </div>
-              <input [hidden]="editId !== data.id" type="text" nz-input [(ngModel)]="data.statement" (blur)="stopEdit(data)" />
-            </td>
-            <td>
-               <nz-tag [nzColor]="data.statusColor"
-              >{{ data.status }}
-            </nz-tag>
-            </td>
-            <td> 
-              <div nz-row>
-                <div nz-col class="gutter-row" [nzSpan]="18">
-                  <nz-progress (click)="$event.stopPropagation()" [nzShowInfo]="false" [nzStrokeColor]="data.gradient" [nzPercent]="data.score"></nz-progress>
-                </div>
-                <div nz-col class="score-row" [nzSpan]="6">
-                  {{data.score}}%
-                </div>
-              </div>
-            </td>
-            <td (click)="$event.stopPropagation()">
-              <!--<i nz-icon nzType="edit" class="edit-icon" (click)="$event.stopPropagation();edit(i, index);" nzTheme="fill"></i>-->
-              <i nz-icon nzType="plus-circle" class="add-icon" (click)="addRow();" nzTheme="fill" title="Add statement"></i>
-              <i nz-icon nzType="check-circle" class="check-icon" (click)="validateStatement(index);" nzTheme="fill" title="Validate statement"></i>
-              <a nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this statement?" (nzOnConfirm)="deleteRow(index)">
-                <i nz-icon nzType="close-circle" class="delete-icon" nzTheme="fill" title="Delete statement"></i>
-              </a>
+            </div>
+            <nz-select
+              id="level"
+              name="level"
+              [(ngModel)]="data.level"
+              nzPlaceHolder="Level"
+              [hidden]="editId !== data.id"
+              (ngModelChange)="levelChangeHandle(data)"
+            >
+              <nz-option
+                *ngFor="let level of levelFilter"
+                [nzLabel]="level.text"
+                [nzValue]="level.text">
+              </nz-option>
+            </nz-select>
+          </td>
           
-            </td>
-          </tr>
-        </ng-template>
-      </tbody>
-    </nz-table>
-    <button nz-button [nzType]="'primary'" (click)="addRow();" *ngIf="this.listOfData.length == 0"><span>Add Statement</span></button>
+          <td title="You can edit by selecting the row">
+            <div class="editable-cell" [hidden]="editId === data.id" (click)="startEdit(data.id)">
+              {{ data.statement }}
+            </div>
+            <input [hidden]="editId !== data.id" type="text" nz-input [(ngModel)]="data.statement" (blur)="stopEdit(data)" />
+          </td>
+          <td>
+            <nz-tag [nzColor]="data.statusColor">{{ data.status }}</nz-tag>
+          </td>
+          <td> 
+            <div nz-row>
+              <div nz-col class="gutter-row" [nzSpan]="18">
+                <nz-progress
+                  (click)="$event.stopPropagation()"
+                  [nzShowInfo]="false"
+                  [nzStrokeColor]="data.gradient"
+                  [nzPercent]="data.score"
+                >
+                </nz-progress>
+              </div>
+              <div nz-col class="score-row" [nzSpan]="6">
+                {{data.score}}%
+              </div>
+            </div>
+          </td>
+          <td (click)="$event.stopPropagation()">
+            <!--<i nz-icon nzType="edit" class="edit-icon" (click)="$event.stopPropagation();edit(i, index);" nzTheme="fill"></i>-->
+            <i nz-icon nzType="plus-circle" class="add-icon" (click)="addRow();" nzTheme="fill" title="Add statement"></i>
+            <i nz-icon nzType="check-circle" class="check-icon" (click)="validateStatement(index);" nzTheme="fill" title="Validate statement"></i>
+            <a nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this statement?" (nzOnConfirm)="deleteRow(index)">
+              <i nz-icon nzType="close-circle" class="delete-icon" nzTheme="fill" title="Delete statement"></i>
+            </a>
+            <div class="add-statement" (click)="isModalVisible = true; addAssumptions(data)">
+              <i nz-icon nzTheme="fill" title="Add Assumptions">+</i>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+    </tbody>
+  </nz-table>
+  <button nz-button [nzType]="'primary'" (click)="addRow();" *ngIf="this.listOfData.length == 0"><span>Add Statement</span></button>
 </div>
+
+<nz-modal [(nzVisible)]="isModalVisible" nzTitle="Add Assumptions" (nzOnCancel)="handleCancelModal()" (nzOnOk)="saveSource()">
+  <input type="text" nz-input placeholder="Add Assumptions" [(ngModel)]="addAssumption"/>
+</nz-modal>
