--- a/src/app/pages/indicator/result/result.component.scss
+++ b/src/app/pages/indicator/result/result.component.scss
@@ -22,6 +22,18 @@ nz-table {
 .action{
     text-align: center;
 }
+.add-statement{
+    border: 1px solid #e8e8e8;
+    background-color: transparent;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 17px;
+    width: 86%;
+    border-radius: 3px;
+    margin-top: 5px;
+    cursor: pointer;
+}
 
 .ant-table-tbody > tr.ant-table-row:hover > td{
     background-color: #fff !important;
