--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -167,7 +167,7 @@ background-color: #453457;
       font-size: 1.5rem;
       border-radius: 5px;
       padding: 0 0.3rem 0.3rem 0.3rem;
-    
+
     }
     .ant-steps-item-title {
       color: #a5c2ae !important;
@@ -287,4 +287,41 @@ background-color: #453457;
 
 .ant-steps-item-wait .ant-steps-item-icon > .ant-steps-icon {
   border-radius: 5px;
+}
+
+.main-header{
+  height: 33px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  //
+  color: #453457;
+}
+
+.main-subtitle{
+  //position: absolute;
+  width: 925px;
+  height: 33px;
+  left: 218px;
+  top: 138px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #453457;
+  padding-bottom: 50px;
+  padding-top: 20px;
 }
