--- a/src/app/pages/indicator/result/result.component.scss
+++ b/src/app/pages/indicator/result/result.component.scss
@@ -23,7 +23,7 @@ nz-table {
     text-align: center;
 }
 .add-statement{
-    border: 1px solid #e8e8e8;
+    border: 1px solid #848484;
     background-color: transparent;
     align-items: center;
     display: flex;
