Enabling Future Years

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -491,7 +491,7 @@
         </strong>
       </h3>
       <span>Target Year: </span>
-      <nz-year-picker style="margin-left: 5px; min-width: 170px;" [(ngModel)]="activeItem.targetDate" [nzDisabledDate]="disabledDate" nzPlaceHolder="Select target year"></nz-year-picker>
+      <nz-year-picker style="margin-left: 5px; min-width: 170px;" [(ngModel)]="activeItem.targetDate" nzPlaceHolder="Select target year"></nz-year-picker>
       <span style="margin-left: 5px;">Target value:</span>
       <input style="max-width: 200px; margin-left: 5px;" nz-input placeholder="Target value" [(ngModel)]="activeItem.targetValue" id="targetValueInput">
     </div>
